# vstgui-scintilla

./: .gitignore  CMakeLists.txt  ReadMe.md
resource/: Editor.uidesc  Info.plist  windows.rc
source/: app.cpp  scintillaeditorview.cpp  scintillaeditorview.h  scintillaeditorview_mac.mm  scintillaeditorview_uidesc.cpp  scintillaeditorview_win32.cpp
